--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,8 @@ worldMask.eachLayer(layer => {
 
   // ✅ Show roads after MT is clicked
   map.addLayer(roadsLayerGroup);
+   refreshRoadStylesFromState();
+
 });
 
                   }
