--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@ worldMask.eachLayer(layer => {
 
   // ✅ Show roads after MT is clicked
   map.addLayer(roadsLayerGroup);
-   refreshRoadStylesFromState();
+   setTimeout(refreshRoadStylesFromState, 0);  // ✅ ensures layers are present
 
 });
 
