--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,10 @@ setTimeout(refreshRoadStylesFromState, 0); // keep this after adding roads
 
   // ✅ Show roads after MT is clicked
   map.addLayer(roadsLayerGroup);
-   setTimeout(refreshRoadStylesFromState, 0);  // ✅ ensures layers are present
+setTimeout(() => {
+  normalizeAllRoadStyles();       // hard reset any leftover blue
+  refreshRoadStylesFromState();   // re-assert saved greens (already added earlier)
+}, 0);
 
 });
 
