--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
   let roadsLayerGroup = L.layerGroup(); // Holds all road layers
   let insideLancaster = false;
   let insideManheim = false;
+  let roadsBufferGroup = null;
   // ==== Back-nav refs (safe placeholders) ====
 let countyLayerRef = null;    // L.GeoJSON of the county boundary layer
 let townshipLayerRef = null;  // L.Layer for the active township polygon
