--- a/index.html
+++ b/index.html
@@ -1152,6 +1152,7 @@ setTimeout(refreshRoadStylesFromState, 0); // keep this after adding roads
 
   // ✅ Show roads after MT is clicked
   map.addLayer(roadsLayerGroup);
+    if (roadsBufferGroup) map.addLayer(roadsBufferGroup);
 setTimeout(() => {
   normalizeAllRoadStyles();       // hard reset any leftover blue
   refreshRoadStylesFromState();   // re-assert saved greens (already added earlier)
