--- a/index.html
+++ b/index.html
@@ -534,25 +534,35 @@ function refreshRoadStylesFromState() {
 }
 function clearActiveHighlight() {
   if (!window.activeRoadName || !window.nameToLayers) return;
+
   const layers = nameToLayers[activeRoadName] || [];
   for (const l of layers) {
     const id = String(l?.feature?.id ?? '');
     const st = segmentStateMap?.get(id);
 
     if (st?.correct) {
-      // your green “solved” style
-      l.setStyle({ color: '#00a65a' });
+      // ✅ Solved: green + thicker weight, no interaction
+      l.setStyle({ color: '#00a65a', weight: WEIGHT_SOLVED });
       l.options.interactive = false;
       const el = l._path; if (el) el.style.pointerEvents = 'none';
+
     } else if (st?.used_hint) {
-      // optional: your orange “hint used” style
-      l.setStyle({ color: 'orange' });
+      // 🟧 Hint used: orange + normal weight
+      l.setStyle({ color: 'orange', weight: WEIGHT_DEFAULT });
+      l.options.interactive = true;
+      const el = l._path; if (el) el.style.pointerEvents = 'auto';
+
     } else {
-      // default idle style
-      l.setStyle({ color: 'black' });
+      // ⚫ Unsolved idle: black + normal weight
+      l.setStyle({ color: 'black', weight: WEIGHT_DEFAULT });
+      l.options.interactive = true;
+      const el = l._path; if (el) el.style.pointerEvents = 'auto';
     }
+
+    l._isActive = false; // clear any "blue active" flag
   }
 }
+
 function normalizeAllRoadStyles() {
   try {
     const group = roadsLayerGroup;
