--- a/index.html
+++ b/index.html
@@ -595,6 +595,30 @@ function normalizeAllRoadStyles() {
     console.warn('normalizeAllRoadStyles error:', e);
   }
 }
+function applyRoadStateStyle(layer) {
+  const id = String(layer?.feature?.id ?? '');
+  const st = segmentStateMap?.get(id);
+
+  if (st?.correct) {
+    layer.setStyle({ color: '#00a65a', weight: WEIGHT_SOLVED, opacity: 1 });
+    layer.options.interactive = false;
+    const el = layer._path; if (el) el.style.pointerEvents = 'none';
+    layer._path?.classList.add('correct-final'); // keep your green class
+    return;
+  }
+  if (st?.used_hint) {
+    layer.setStyle({ color: 'orange', weight: WEIGHT_DEFAULT, opacity: 1 });
+    layer.options.interactive = true;
+    const el = layer._path; if (el) el.style.pointerEvents = 'auto';
+    layer._path?.classList.remove('correct-final');
+    return;
+  }
+  // unsolved
+  layer.setStyle({ color: 'black', weight: WEIGHT_DEFAULT, opacity: 1 });
+  layer.options.interactive = true;
+  const el = layer._path; if (el) el.style.pointerEvents = 'auto';
+  layer._path?.classList.remove('correct-final');
+}
 
 
 async function checkLogin() {
